# quixwrap

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/quixwrap/: __init__.py  base.py  cli.py  codegen.py  deployment.jinja2
tests/: .quix.yaml.variables  quix.yaml  test.env  test_cli.py  test_variables.py  test_wrapper.py
